fixed spacing on keynote speaker section

--- a/css/main.css
+++ b/css/main.css
@@ -797,11 +797,16 @@ COMING SOON PAGES
     text-transform: uppercase;
     margin-top: 0;
   }
-  .speaking-topics-div2 {
+  .speaking-topics-div2,
+  .keynote-speaker-text {
     margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+
+  .keynote-speaker-text {
+    margin-left: 25px;
   }
 
   .speaking-topics {
@@ -1033,7 +1038,8 @@ COMING SOON PAGES
     padding: 30px 60px;
   }
 
-  .speaking-topics-div2 {
+  .speaking-topics-div2,
+  .keynote-speaker img {
     margin-left: 120px;
   }
 
